--- a/app/assets/scss/themes/default/index.scss
+++ b/app/assets/scss/themes/default/index.scss
@@ -6,6 +6,8 @@
 @import "~@fontsource/roboto/700.css";
 @import "~@fontsource/roboto/900.css";
 
+@import "monaco-editor/dev/vs/editor/editor.main.css";
+
 @import '~@fortawesome/fontawesome-free/css/all.css';
 @import '~material-icons/iconfont/material-icons';
 
