--- a/app/templates/flat.html.twig
+++ b/app/templates/flat.html.twig
@@ -55,6 +55,9 @@
                                     <h1> Hi, my name is Sebastian</h1>
                                     <p class="fs-4">and I love programming</p>
                                 </div>
+                                <div class="col position-relative monacoBoxColumn">
+                                    <div id="monacoBox" class="border border-1 rounded"></div>
+                                </div>
                             </section>
                             <section id="about" class="row">
                                 <div class="col">
