--- a/app/assets/scss/themes/default/flat.scss
+++ b/app/assets/scss/themes/default/flat.scss
@@ -174,6 +174,24 @@ body {
   }
 }
 
+.git-line-container {
+  margin-top: 300px;
+  display: flex;
+}
+.dvh-100 {
+  height: 100dvh;
+}
+.git-line-bg {
+  //background: rgba(255, 160, 13, 0.36);
+  background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgba(255,160,13,0.36458333333333337) 3%, rgba(255,160,13,0.35898109243697474) 95%, rgba(0,212,255,0) 100%);
+  height: 72%;
+  width: 4px;
+}
+.git-line-entry-point {
+  border: 1px solid rgb(121, 121, 121);
+  background: rgba(255, 255, 255, 0.4);
+}
+
 @media only screen and (max-width: 576px) {
   .nav-top-height {
     margin-top: 100px;
