--- a/app/templates/flat.html.twig
+++ b/app/templates/flat.html.twig
@@ -58,7 +58,34 @@
                                 <div class="col position-relative monacoBoxColumn">
                                     <div id="monacoBox" class="border border-1 rounded"></div>
                                 </div>
+                                <div class="w-100"></div>
+
+                                <div class="col position-absolute git-line-container ps-4">
+                                    <div class="d-flex flex-column events-none position-relative dvh-100">
+                                        <div class="mx-auto">
+                                            <div class="d-inline-block rounded-5 p-2 git-line-entry-point"></div>
+                                        </div>
+                                        <div class="git-line-bg rounded mx-auto"></div>
+
+                                        <div class="mx-auto my-3 home-campaign-glowing-icon">
+                                            <div class="position-relative d-inline-block z-1">
+                                                <svg aria-hidden="true" height="24" viewBox="0 0 24 24" version="1.1" width="24" data-view-component="true" class="octicon octicon-code">
+                                                    <path d="M15.22 4.97a.75.75 0 0 1 1.06 0l6.5 6.5a.75.75 0 0 1 0 1.06l-6.5 6.5a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L21.19 12l-5.97-5.97a.75.75 0 0 1 0-1.06Zm-6.44 0a.75.75 0 0 1 0 1.06L2.81 12l5.97 5.97a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215l-6.5-6.5a.75.75 0 0 1 0-1.06l6.5-6.5a.75.75 0 0 1 1.06 0Z"></path>
+                                                </svg>
+                                                <span class="position-absolute left-0 top-0 height-full width-full home-campaign-glowing-icon-glow circle z-n1" style="background-color: var(--mktg-accent-primary); filter: blur(18px);"></span>
+                                            </div>
+                                        </div>
+
+                                        <div style="background: linear-gradient(#7C72FF, #2DA44E 80%, #3FB950);" class="home-campaign-git-line height-full rounded mx-auto"></div>
+                                    </div>
+                                </div>
+
                             </section>
+
+
+
+
+
                             <section id="about" class="row">
                                 <div class="col">
                                     <p>much more content</p>
